# data-juicer-sandbox

./: .pre-commit-config.yaml  404.html  README.md  pyproject.toml
.github/workflows/: deploy_sphinx_docs.yml  unit-test-partial.yml
configs/demo/: process.yaml  sandbox.yaml
data_juicer_sandbox/: data_pool_manipulators.py  env_manager.py  evaluators.py  factories.py  hooks.py  model_executors.py  pipelines.py
data_juicer_sandbox/cli/: sandbox_starter.py
data_juicer_sandbox/specific_hooks/intervl_coco_captioning/: model_hooks.py  preparation_hooks.py
data_juicer_sandbox/specific_hooks/rft/: model_hooks.py
data_juicer_sandbox/specific_hooks/text_to_video/: model_hooks.py  preparation_hooks.py
docs/: DeveloperGuide.md  DeveloperGuide_ZH.md  QA.md  UserGuide.md
docs/sphinx_doc/source/: docs_index.rst  docs_index_ZH.rst
en/main/: .buildinfo  README.html  api.html  docs_index.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/main/.doctrees/: README.doctree  api.doctree  docs_index.doctree  environment.pickle  index.doctree
en/main/_modules/: index.html
en/main/api/: data_juicer_sandbox.context_infos.html  data_juicer_sandbox.data_pool_manipulators.html  data_juicer_sandbox.env_manager.html  data_juicer_sandbox.evaluators.html  data_juicer_sandbox.factories.html  data_juicer_sandbox.helper_funcs.html  data_juicer_sandbox.hooks.html  data_juicer_sandbox.html  data_juicer_sandbox.model_executors.html  data_juicer_sandbox.pipelines.html  data_juicer_sandbox.utils.html  modules.html
en/main/docs/: DeveloperGuide.html  QA.html  UserGuide.html
zh_CN/main/: .buildinfo  README.html  api.html  docs_index_ZH.html  genindex.html  index_ZH.html  objects.inv  py-modindex.html  search.html  searchindex.js
zh_CN/main/.doctrees/: README.doctree  api.doctree  docs_index_ZH.doctree  environment.pickle  index_ZH.doctree
zh_CN/main/_modules/: index.html
zh_CN/main/_sources/: api.rst.txt
zh_CN/main/api/: data_juicer_sandbox.context_infos.html  data_juicer_sandbox.data_pool_manipulators.html  data_juicer_sandbox.env_manager.html  data_juicer_sandbox.evaluators.html  data_juicer_sandbox.factories.html  data_juicer_sandbox.helper_funcs.html  data_juicer_sandbox.hooks.html  data_juicer_sandbox.html  (+4 more)
(+67 files in other folders)
